--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "redgoose",
-	"version": "2.0.1",
+	"version": "2.0.2",
 	"private": true,
 	"author": "redgoose <http://redgoose.me>",
 	"license": "ISC",
@@ -9,15 +9,16 @@
 		"url": "git+https://redgoose@bitbucket.org/redgooseme/redgoose-v2.git"
 	},
 	"devDependencies": {
-		"babel-core": "^6.17.0",
-		"babel-loader": "^6.2.5",
-		"babel-preset-es2015": "^6.16.0",
+		"babel-core": "^6.21.0",
+		"babel-loader": "^6.2.10",
+		"babel-preset-es2015": "^6.18.0",
 		"gulp": "^3.9.1",
-		"gulp-concat": "^2.6.0",
+		"gulp-concat": "^2.6.1",
+		"gulp-imagemin": "^3.1.1",
 		"gulp-rename": "^1.2.2",
-		"gulp-sass": "^2.3.2",
-		"gulp-sourcemaps": "^1.6.0",
-		"gulp-uglify": "^1.5.4",
+		"gulp-sass": "^3.1.0",
+		"gulp-sourcemaps": "^2.4.0",
+		"gulp-uglify": "^2.0.0",
 		"webpack-stream": "^3.2.0"
 	}
 }
