--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,14 @@
 {
 	"presets": [
 		[
-			"env", { "modules": false }
+			"env", {
+				"modules": false,
+				"targets": {
+					"browsers": ["last 2 Chrome versions"]
+				}
+			}
 		],
-		"stage-2"
+		"stage-0"
 	],
 	"plugins": [
 		"external-helpers"
