--- a/manifest.json
+++ b/manifest.json
@@ -18,8 +18,9 @@
       "sizes": "192x192"
     }
   ],
-  "start_url": "/?homescreen=1",
-  "display": "standalone",
+  "start_url": "/",
+  "display": "browser",
   "theme_color": "#b31f37",
-  "background_color": "#fff"
+  "background_color": "#fff",
+  "orientation": "portrait"
 }
