모바일 타입에 맞춰서 수정

--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,7 @@
     }
   ],
   "start_url": "/",
-  "display": "browser",
+  "display": "standalone",
   "theme_color": "#b31f37",
   "background_color": "#fff",
   "orientation": "portrait"
