--- a/package.json
+++ b/package.json
@@ -5,7 +5,18 @@
   "repository": "https://gitlab.com/redgoose-me/redgoose.me.git",
   "author": "redgoose <scripter@me.com>",
   "license": "ISC",
-  "dependencies": {
-    "jquery": "^3.3.1"
+  "scripts": {
+    "start": "./action.sh start",
+    "setup": "./action.sh install",
+    "watch": "./action.sh watch",
+    "build": "./action.sh build"
+  },
+  "dependencies": {},
+  "devDependencies": {
+    "cssnano": "^4.1.0",
+    "node-sass": "^4.9.3",
+    "postcss-preset-env": "^5.3.0",
+    "autoprefixer": "^9.1.5",
+    "postcss-modules": "^1.3.2"
   }
 }
