--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "cssnano": "^4.1.0",
-    "node-sass": "^4.9.3",
-    "postcss-preset-env": "^5.3.0",
     "autoprefixer": "^9.1.5",
-    "postcss-modules": "^1.3.2"
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "cssnano": "^4.1.0",
+    "global": "^4.3.2",
+    "node-sass": "^4.9.3",
+    "parcel": "^1.9.7",
+    "postcss-modules": "^1.3.2",
+    "postcss-preset-env": "^5.3.0"
   }
 }
