--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,13 @@
 		"env"
 	],
 	"plugins": [
-		"transform-object-rest-spread"
+		"transform-object-rest-spread",
+		[
+			"transform-runtime",
+			{
+				"polyfill": false,
+				"regenerator": true
+			}
+		]
 	]
 }
