--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "devDependencies": {
     "autoprefixer": "^9.1.5",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
+    "babel-runtime": "^6.26.0",
     "cssnano": "^4.1.0",
     "global": "^4.3.2",
     "node-sass": "^4.9.3",
