디테일 페이지 작업중..

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     "require": {
         "vlucas/phpdotenv": "^2.5",
         "altorouter/altorouter": "^1.2",
-        "eftec/bladeone": "^3.8"
+        "eftec/bladeone": "^3.8",
+        "erusev/parsedown": "^1.7"
     },
     "autoload": {
         "psr-4": {
