디테일 인터랙션 마무리, about페이지 작업중..

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 TITLE=redgoose
+DESCRIPTION=붉은거위의 개인작업물 라이브러리. Redgoose personal work library
 PATH_API=https://goose.redgoose.me
 PATH_RELATIVE=
 PATH_COOKIE=/
