--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "ISC",
   "scripts": {
     "start": "./action.sh start",
-    "setup": "./action.sh install",
+    "setup": "./action.sh setup",
     "watch": "./action.sh watch",
     "build": "./action.sh build"
   },
