테스트하면서 수정한것들..

--- a/manifest.json
+++ b/manifest.json
@@ -21,6 +21,6 @@
   "start_url": "/",
   "display": "standalone",
   "theme_color": "#b31f37",
-  "background_color": "#fff",
+  "background_color": "#fafbfc",
   "orientation": "portrait"
 }
