--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "watch": "./action.sh watch",
     "build": "./action.sh build"
   },
-  "dependencies": {},
+  "dependencies": {
+    "cash-dom": "^4.1.5"
+  },
   "devDependencies": {
     "autoprefixer": "^9.7.2",
     "cssnano": "^4.1.10",
