--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "vlucas/phpdotenv": "^3.3.2",
         "altorouter/altorouter": "^1.2.0",
         "eftec/bladeone": "^3.19",
-        "erusev/parsedown": "^1.7.1"
+        "erusev/parsedown": "^1.7.1",
+        "redgoose/paginate": "^1.0"
     },
     "autoload": {
         "psr-4": {
