일부 리팩토링
- goose-api 1.2.0 대응을 위한 준비
- /lab 추가
- 충돌을 피하기 위하여 클래스 이름변경

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ APP_TOKEN_PUBLIC="eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJodHRwczpcL1wvZ
 
 APP_USE_DEBUG="0"
 APP_TIMEZONE="UTC"
+APP_DEV="0"
 
 APP_DEFAULT_INDEX_SIZE="24"
 APP_DEFAULT_RSS_SIZE="15"
