--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redgoose.me",
-  "version": "5.3.5",
+  "version": "5.3.6",
   "main": "index.js",
   "repository": "https://gitlab.com/redgoose-me/redgoose.me.git",
   "author": "redgoose <scripter@me.com>",
@@ -17,11 +17,11 @@
     "redgoose-content-body": "https://github.com/redgoose-dev/redgoose-content-body.git"
   },
   "devDependencies": {
-    "autoprefixer": "^10.0.2",
-    "cssnano": "^4.1.10",
-    "node-sass": "^5.0.0",
-    "parcel": "^1.12.4",
-    "postcss-modules": "^3.2.2",
+    "autoprefixer": "^10.2.6",
+    "cssnano": "^4.1.11",
+    "sass": "^1.34.1",
+    "parcel": "1.12.3",
+    "postcss-modules": "^4.0.0",
     "postcss-preset-env": "^6.7.0"
   }
 }
