--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
         "eftec/bladeone": "^3.52",
         "erusev/parsedown": "^1.7.4",
         "redgoose/paginate": "^1.0.3",
-        "redgoose/console": "^1.0.1",
-        "redgoose/restapi": "^1.0.2"
+        "redgoose/console": "^1.0.1"
     },
     "autoload": {
         "psr-4": {
