--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,22 @@
 {
-    "name": "redgoose/redgoose.me",
-    "authors": [
-        {
-            "name": "redgoose",
-            "email": "scripter@me.com"
-        }
-    ],
-    "require": {
-        "vlucas/phpdotenv": "^5.3.0",
-        "altorouter/altorouter": "^2.0.1",
-        "eftec/bladeone": "^3.52",
-        "erusev/parsedown": "^1.7.4",
-        "redgoose/paginate": "^1.0.3",
-        "redgoose/console": "^1.0.1"
-    },
-    "autoload": {
-        "psr-4": {
-            "Core\\": "core/"
-        }
+  "name": "redgoose/redgoose.me",
+  "authors": [
+    {
+      "name": "redgoose",
+      "email": "scripter@me.com"
     }
+  ],
+  "require": {
+    "vlucas/phpdotenv": "^5.4.1",
+    "altorouter/altorouter": "^2.0.2",
+    "eftec/bladeone": "^4.5.3",
+    "erusev/parsedown": "^1.7.4",
+    "redgoose/console": "^1.0.1",
+    "redgoose/paginate": "^1.0.4"
+  },
+  "autoload": {
+    "psr-4": {
+      "Core\\": "core/"
+    }
+  }
 }
