--- a/manifest.json
+++ b/manifest.json
@@ -25,7 +25,7 @@
   ],
   "start_url": "/",
   "display": "standalone",
-  "theme_color": "#b31f37",
+  "theme_color": "#000000",
   "background_color": "#fafbfc",
   "orientation": "portrait"
 }
