--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@tsconfig/svelte": "^3.0.0",
     "@types/express": "^4.17.14",
     "@types/node": "^18.7.23",
+    "auto-writer": "^1.1.2",
     "nodemon": "^2.0.20",
     "sass": "^1.55.0",
     "svelte": "^3.50.1",
