--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
   ],
   "dependencies": {
     "express": "^4.18.1",
-    "isbot": "^3.6.0"
+    "isbot": "^3.6.0",
+    "marked": "^4.1.1"
   },
   "devDependencies": {
+    "@redgoose/markdown-style": "^1.1.3",
     "@sveltejs/vite-plugin-svelte": "^1.0.8",
     "@tsconfig/svelte": "^3.0.0",
     "@types/express": "^4.17.14",
+    "@types/marked": "^4.0.7",
     "@types/node": "^18.7.23",
     "auto-writer": "^1.1.2",
     "nodemon": "^2.0.20",
