--- a/.env
+++ b/.env
@@ -1,7 +1,17 @@
 # server
 VITE_HOST="localhost"
 VITE_PORT="3000"
-VITE_OPEN_BROWSER="false"
 VITE_OUT_DIR="dist"
 
+# api
+VITE_API_URL="http://localhost:8000"
+VITE_API_TOKEN=""
+
+# app
+VITE_APP_SRL="1"
+VITE_INDEX_SIZE="24"
+VITE_RSS_SIZE="15"
+
 # etc
+VITE_OPEN_BROWSER="false"
+VITE_TIMEZONE="Asia/Seoul"
