--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "nodemonConfig": {
     "delay": 1000,
-    "ignore": [ "src/**/*", "dist/**/*" ]
+    "ignore": ["src/**/*", "dist/**/*"]
   },
   "engines": {
     "node": "16"
@@ -24,9 +24,11 @@
     "last 2 versions"
   ],
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
     "isbot": "^3.6.0",
-    "marked": "^4.1.1"
+    "marked": "^4.1.1",
+    "ohmyfetch": "^0.4.19"
   },
   "devDependencies": {
     "@redgoose/markdown-style": "^1.1.3",
