--- a/.env
+++ b/.env
@@ -8,6 +8,11 @@ VITE_API_URL="http://localhost:8000"
 VITE_API_TOKEN=""
 
 # app
+VITE_APP_NAME="redgoose"
+VITE_APP_TITLE="redgoose (붉은거위)"
+VITE_APP_DESCRIPTION="붉은거위의 개인작업물 라이브러리. Redgoose personal work library"
+VITE_APP_HOST="https://redgoose.me"
+VITE_APP_LANG="ko"
 VITE_APP_SRL="1"
 VITE_INDEX_SIZE="24"
 VITE_RSS_SIZE="15"
