서치엔진 페이지 작업

--- a/.env
+++ b/.env
@@ -11,6 +11,7 @@ VITE_API_TOKEN=""
 VITE_APP_NAME="redgoose"
 VITE_APP_TITLE="redgoose (붉은거위)"
 VITE_APP_DESCRIPTION="붉은거위의 개인작업물 라이브러리. Redgoose personal work library"
+VITE_APP_KEYWORDS="redgoose 2d 3d photography graphic design case-study programing web 붉은거위 거위 portfolio drawing"
 VITE_APP_HOST="https://redgoose.me"
 VITE_APP_LANG="ko"
 VITE_APP_SRL="1"
