--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev:live": "nodemon --no-warnings server/entry.js --development",
     "prebuild": "rm -rf ./dist",
     "build": "vite build",
-    "start": "node server/entry.js --production"
+    "start": "node --no-warnings server/entry.js --production"
   },
   "nodemonConfig": {
     "delay": 1000,
