--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redgoose.me",
-  "version": "5.6.1",
+  "version": "5.6.2",
   "repository": "https://github.com/redgoose-dev/redgoose.me.git",
   "author": "redgoose <scripter@me.com>",
   "type": "module",
@@ -20,31 +20,34 @@
   "engines": {
     "node": "16"
   },
-  "browserslist": ["> 1%", "last 2 versions"],
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ],
   "dependencies": {
     "cookie-parser": "^1.4.6",
-    "express": "^4.18.1",
-    "isbot": "^3.6.0",
+    "express": "^4.18.2",
+    "isbot": "^3.6.2",
     "marked": "^4.1.1",
-    "ohmyfetch": "^0.4.19",
+    "ohmyfetch": "^0.4.20",
     "pug": "^3.0.2"
   },
   "devDependencies": {
-    "@redgoose/markdown-style": "^1.1.3",
-    "@sveltejs/vite-plugin-svelte": "^1.0.8",
+    "@redgoose/markdown-style": "^1.1.4",
+    "@sveltejs/vite-plugin-svelte": "^1.1.0",
     "@tsconfig/svelte": "^3.0.0",
     "@types/express": "^4.17.14",
     "@types/marked": "^4.0.7",
-    "@types/node": "^18.7.23",
+    "@types/node": "^18.11.7",
     "auto-writer": "^1.1.2",
     "nodemon": "^2.0.20",
     "sass": "^1.55.0",
-    "svelte": "^3.50.1",
-    "svelte-check": "^2.9.1",
+    "svelte": "^3.52.0",
+    "svelte-check": "^2.9.2",
     "svelte-preprocess": "^4.10.7",
     "tinro": "^0.6.12",
     "tslib": "^2.4.0",
     "typescript": "^4.8.4",
-    "vite": "^3.1.4"
+    "vite": "^3.2.0"
   }
 }
