pwa 관련 조정작업

--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ VITE_API_TOKEN=""
 
 # app
 VITE_APP_NAME="redgoose"
-VITE_APP_TITLE="붉은거위(redgoose)"
+VITE_APP_TITLE="붉은거위 / redgoose"
 VITE_APP_DESCRIPTION="붉은거위의 개인작업물 라이브러리. Redgoose personal work library"
 VITE_APP_KEYWORDS="redgoose 2d 3d photography graphic design case-study programing web 붉은거위 거위 portfolio drawing"
 VITE_APP_HOST="https://redgoose.me"
