--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redgoose.me",
-  "version": "5.6.7",
+  "version": "5.7.0",
   "repository": "https://github.com/redgoose-dev/redgoose.me.git",
   "author": "redgoose <scripter@me.com>",
   "type": "module",
@@ -18,7 +18,7 @@
     "ignore": ["src/**/*", "dist/**/*"]
   },
   "engines": {
-    "node": "16"
+    "node": "20"
   },
   "browserslist": [
     "> 1%",
@@ -27,27 +27,28 @@
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
-    "isbot": "^3.6.5",
-    "marked": "^4.2.12",
+    "isbot": "^3.6.10",
+    "marked": "4.3.0",
     "ohmyfetch": "^0.4.21",
     "pug": "^3.0.2"
   },
   "devDependencies": {
     "@redgoose/markdown-style": "^1.1.4",
-    "@sveltejs/vite-plugin-svelte": "^2.0.2",
-    "@tsconfig/svelte": "^3.0.0",
+    "@sveltejs/vite-plugin-svelte": "^2.1.1",
+    "@tsconfig/svelte": "^4.0.1",
     "@types/express": "^4.17.17",
-    "@types/marked": "^4.0.8",
-    "@types/node": "^18.11.18",
+    "@types/marked": "^4.3.0",
+    "@types/node": "^18.16.3",
     "auto-writer": "^1.1.2",
-    "nodemon": "^2.0.20",
-    "sass": "^1.58.0",
-    "svelte": "^3.55.1",
-    "svelte-check": "^3.0.3",
-    "svelte-preprocess": "^5.0.1",
+    "esbuild": "^0.17.18",
+    "nodemon": "^2.0.22",
+    "sass": "^1.62.1",
+    "svelte": "^3.58.0",
+    "svelte-check": "^3.2.0",
+    "svelte-preprocess": "^5.0.3",
     "tinro": "^0.6.12",
     "tslib": "^2.5.0",
-    "typescript": "^4.9.5",
-    "vite": "^4.1.1"
+    "typescript": "^5.0.4",
+    "vite": "^4.3.4"
   }
 }
