--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redgoose.me",
-  "version": "5.7.1",
+  "version": "5.7.2",
   "repository": "https://github.com/redgoose-dev/redgoose.me.git",
   "author": "redgoose <scripter@me.com>",
   "type": "module",
@@ -29,26 +29,26 @@
     "express": "^4.18.2",
     "isbot": "^3.6.10",
     "marked": "4.3.0",
-    "ohmyfetch": "^0.4.21",
+    "ofetch": "^1.1.0",
     "pug": "^3.0.2"
   },
   "devDependencies": {
     "@redgoose/markdown-style": "^1.1.4",
-    "@sveltejs/vite-plugin-svelte": "^2.2.0",
+    "@sveltejs/vite-plugin-svelte": "^2.4.1",
     "@tsconfig/svelte": "^4.0.1",
     "@types/express": "^4.17.17",
     "@types/marked": "^4.3.0",
-    "@types/node": "^20.1.1",
+    "@types/node": "^20.2.5",
     "auto-writer": "^1.1.2",
-    "esbuild": "^0.17.18",
+    "esbuild": "^0.17.19",
     "nodemon": "^2.0.22",
     "sass": "^1.62.1",
     "svelte": "^3.59.1",
-    "svelte-check": "^3.3.2",
-    "svelte-preprocess": "^5.0.3",
+    "svelte-check": "^3.4.3",
+    "svelte-preprocess": "^5.0.4",
     "tinro": "^0.6.12",
-    "tslib": "^2.5.0",
-    "typescript": "^5.0.4",
-    "vite": "^4.3.5"
+    "tslib": "^2.5.3",
+    "typescript": "^5.1.3",
+    "vite": "^4.3.9"
   }
 }
