--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redgoose.me",
-  "version": "5.7.2",
+  "version": "5.7.3",
   "repository": "https://github.com/redgoose-dev/redgoose.me.git",
   "author": "redgoose <scripter@me.com>",
   "type": "module",
@@ -28,21 +28,21 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "isbot": "^3.6.10",
-    "marked": "4.3.0",
+    "marked": "^5.1.0",
     "ofetch": "^1.1.0",
     "pug": "^3.0.2"
   },
   "devDependencies": {
-    "@redgoose/markdown-style": "^1.1.4",
+    "@redgoose/markdown-style": "^1.1.6",
     "@sveltejs/vite-plugin-svelte": "^2.4.1",
     "@tsconfig/svelte": "^4.0.1",
     "@types/express": "^4.17.17",
-    "@types/marked": "^4.3.0",
-    "@types/node": "^20.2.5",
+    "@types/marked": "^5.0.0",
+    "@types/node": "^20.3.1",
     "auto-writer": "^1.1.2",
-    "esbuild": "^0.17.19",
+    "esbuild": "^0.18.2",
     "nodemon": "^2.0.22",
-    "sass": "^1.62.1",
+    "sass": "^1.63.4",
     "svelte": "^3.59.1",
     "svelte-check": "^3.4.3",
     "svelte-preprocess": "^5.0.4",
