--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "redgoose.me",
   "version": "5.8.1",
-  "repository": "https://github.com/redgoose-dev/redgoose.me.git",
+  "repository": "https://github.com/gooose-eth/redgoose.me.git",
   "author": "redgoose <scripter@me.com>",
   "type": "module",
   "license": "MIT",
@@ -16,9 +16,6 @@
   "nodemonConfig": {
     "delay": 1000,
     "ignore": ["src/**/*", "dist/**/*"]
-  },
-  "engines": {
-    "node": "20"
   },
   "browserslist": [
     "> 1%",
