--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "bun server/entry.js --development",
+    "dev": "node server/entry.js --development",
     "prebuild": "rm -rf ./dist",
     "build": "vite build",
-    "start": "bun server/entry.js --production"
+    "start": "node server/entry.js --production"
   },
   "browserslist": [
     "> 1%",
