--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redgoose.me",
-  "version": "5.9.2",
+  "version": "5.9.3",
   "repository": "https://github.com/gooose-eth/redgoose.me.git",
   "author": "redgoose <scripter@me.com>",
   "type": "module",
@@ -17,20 +17,20 @@
   ],
   "dependencies": {
     "cookie-parser": "^1.4.6",
-    "express": "^4.18.2",
-    "isbot": "^3.7.0",
-    "marked": "^10.0.0",
-    "ofetch": "^1.3.3",
+    "express": "^4.19.2",
+    "isbot": "^5.1.6",
+    "marked": "^12.0.2",
+    "ofetch": "^1.3.4",
     "pug": "^3.0.2"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^2.5.2",
+    "@sveltejs/vite-plugin-svelte": "^3.1.0",
     "auto-writer": "^1.1.2",
-    "esbuild": "^0.19.5",
-    "sass": "^1.69.5",
-    "svelte": "^4.2.3",
-    "svelte-preprocess": "^5.1.0",
+    "esbuild-wasm": "^0.21.1",
+    "sass": "^1.77.1",
+    "svelte": "^4.2.16",
+    "svelte-preprocess": "^5.1.4",
     "tinro": "^0.6.12",
-    "vite": "^4.5.0"
+    "vite": "^5.2.11"
   }
 }
