백엔드 / 봇 관련된 렌더링 조정

--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "dev": "NODE_ENV=development concurrently \"bun run --bun server/main.js\" \"bunx --bun vite\"",
     "prebuild": "rm -rf ./dist",
     "build": "bunx --bun vite build",
-    "start": "NODE_ENV=production bun run --bun server/main.js"
+    "preview": "NODE_ENV=production bun run --bun server/main.js"
   },
   "browserslist": [
     "> 1%",
     "last 2 versions"
   ],
   "dependencies": {
+    "@kitajs/html": "^4.2.9",
     "@types/bun": "^1.2.19",
     "isbot": "^5.1.29",
     "marked": "^16.1.2",
@@ -25,7 +26,9 @@
     "@vitejs/plugin-vue": "^6.0.1",
     "auto-writer": "^1.1.2",
     "concurrently": "^9.2.0",
+    "jsdom": "^26.1.0",
     "ofetch": "^1.4.1",
+    "terser": "^5.43.1",
     "vite": "^7.0.6",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
