클라이언트 본문 페이지 작업

--- a/.env
+++ b/.env
@@ -8,6 +8,13 @@ BASE_PATH="."
 URL_PATH="http://localhost"
 DIR_OUT="dist"
 
+# cookie
+COOKIE_PREFIX="goose-"
+COOKIE_MAX_AGE="604800" # 7 days
+COOKIE_DOMAIN="redgoose.me"
+COOKIE_HTTP_ONLY="true"
+COOKIE_SECURE="true"
+
 # api
 API_URL=""
 API_CLIENT_URL=""
@@ -16,5 +23,3 @@ API_TOKEN=""
 # app
 APP_SRL=""
 APP_INDEX_SIZE="24"
-
-# etc
