--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "auto-writer": "^1.1.2",
     "concurrently": "^9.2.0",
     "jsdom": "^26.1.0",
+    "lucide-vue-next": "^0.539.0",
     "ofetch": "^1.4.1",
     "terser": "^5.43.1",
     "vite": "^7.0.6",
