--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev:server": "NODE_ENV=development bun run --bun server/main.js",
     "prebuild": "rm -rf ./dist",
     "build": "bunx --bun vite build",
-    "preview": "NODE_ENV=production bun run --bun server/main.js"
+    "preview": "NODE_ENV=production bun run --bun server/main.js",
+    "version-patch": "npm version patch"
   },
   "browserslist": [
     "> 1%",
@@ -18,22 +19,22 @@
   ],
   "dependencies": {
     "@kitajs/html": "^4.2.9",
-    "@types/bun": "^1.2.20",
+    "@types/bun": "^1.2.21",
     "isbot": "^5.1.30",
-    "marked": "^16.2.0",
+    "marked": "^16.2.1",
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
-    "auto-writer": "^1.1.2",
-    "concurrently": "^9.2.0",
+    "auto-writer": "^1.2.3",
+    "concurrently": "^9.2.1",
     "jsdom": "^26.1.0",
     "lucide-vue-next": "^0.540.0",
     "ofetch": "^1.4.1",
-    "sass": "^1.90.0",
+    "sass": "^1.91.0",
     "terser": "^5.43.1",
-    "vite": "^7.1.2",
-    "vue": "^3.5.18",
+    "vite": "^7.1.3",
+    "vue": "^3.5.20",
     "vue-router": "^4.5.1"
   }
 }
